Add accepting friendships
